[package]
name = "qsib_sensor_rs"
version = "0.1.0"
authors = ["Jacob Trueb <jtrueb@northwestern.edu>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "qsib_sensor_rs"
crate-type = ["staticlib"]

[dependencies]
cstr_core = "0.2.2"
cty = "0.2.1"
heapless = "0.5.6"
rand_xorshift = "0.1"
rand_core = { version = "0.4", default-features = false }
spin = "0.7.0"

[dev-dependencies]
rand = "0.7.3"
assert_approx_eq = "1.1.0"

[target.'cfg(target_arch = "arm")'.dependencies]
alloc-cortex-m = "0.4.0"
cortex-m-rt = "0.6.13"

[target.'cfg(any(target_arch = "aarch64", target_arch="x86_64"))'.dependencies]
jemallocator = "*"
